[sc-3128] Resource list page and upload improvements (#432)
* Basic buttons for resource list bulk actions and table options

* Cleanup translations + fix select on kb creation modal

* Upload actions are now in resource list page

  - Remove upload actions from the dock
  - Add upload button and dropdown in resource list page header
  - Clean up  translations accordingly

* Clean resource translations

  - remove unused translations
  - add missing spanish and catalan translations

* Search bar in resource list

* UI preparation status buttons

* Fix unit tests

* Display description on two lines max + ellipsis

* Fix pagination when searching in resource page

  - Add pagination in search result models
  - Workaround while backend doesn't provide real total in search results: when there is a search:
     - we display total count of resources if there is more than one page or if the current page is not the first one.
     - We display a total of 1 page otherwise
  - Use pastanaga buttons in pagination component

* Fix unit tests

* Keep resource list header sticky when scrolling

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -38,7 +38,6 @@
 	"account.knowledgeboxes": "Caixes de coneixement",
 	"account.licence": "Llicència",
 	"account.logo": "Imatge de la caixa",
-	"account.logo_description": "Selecciona i puja una imatge",
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
@@ -147,7 +146,6 @@
 	"generic.back_to_home": "Tornar a la Home",
 	"generic.by_relevance": "per rellevància",
 	"generic.cancel": "Cancel·lar",
-	"generic.change_file": "Puja la imatge",
 	"generic.clean": "Netejar",
 	"generic.clear_all": "Esborrar tot",
 	"generic.close": "Tancar",
@@ -224,6 +222,7 @@
 	"generic.title": "Títol",
 	"generic.uid": "UID",
 	"generic.unlink": "Desenllaçar",
+	"generic.upload": "Pujar",
 	"generic.user": "Usuari",
 	"generic.user_preferences": "Preferències d’Usuari",
 	"generic.users": "Usuaris",
@@ -254,6 +253,7 @@
 	"language.ru": "Rus",
 	"language.sv": "Suec",
 	"language.tr": "Turc",
+	"link.create.error": "Error en carregar l'enllaç",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.check_email": "Comprova el teu correu!",
 	"login.company": "Empresa",
@@ -351,26 +351,18 @@
 	"reset.password": "Nova contrasenya",
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Crear contrasenya",
-	"resource.access_source_file": "Accedir al document d'origen",
 	"resource.add_labels": "Afegeix etiquetes",
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
-	"resource.back_to_results": "Tornar als resultats",
 	"resource.classification": "Classificació",
-	"resource.close_preview": "Tancar previsualització",
 	"resource.created": "Data creació",
-	"resource.created_text": "Text creat",
-	"resource.creation_date": "Data de creació del recurs",
-	"resource.default_data": "Dades per defecte",
 	"resource.delete_resource_confirm": "Vols suprimir el document?",
 	"resource.delete_resource_warning": "Si elimines aquest document també s’esborrarà tota la informació processada.",
 	"resource.delete_resources_confirm": "Vols suprimir documents?",
 	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
-	"resource.description": "Descripció",
 	"resource.description.title": "Descripció",
 	"resource.edit": "Editar recurs",
-	"resource.edit_selected_resources": "Edició del recurs o recursos seleccionats",
 	"resource.entities.date": "Dates",
 	"resource.entities.event": "Esdeveniments",
 	"resource.entities.fac": "Construccions",
@@ -389,36 +381,14 @@
 	"resource.entities.time": "Temps",
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
-	"resource.file.creator": "Creador",
-	"resource.file.metadata.title": "Metadades del recurs",
-	"resource.file_creation_date": "Data de creació del fitxer",
-	"resource.hidehighlight": "Elimina el ressaltat",
-	"resource.inception.title": "Elements trobats",
-	"resource.language": "Idioma",
-	"resource.name_entities": "Informació clau",
-	"resource.non_editable_data": "Dades no editables",
-	"resource.ocr.title": "OCR",
-	"resource.other_data": "Altres dades del recurs",
-	"resource.page.upload_image": "Puja una imatge descriptiva del recurs",
-	"resource.paragraph.help": "Cerca",
-	"resource.paragraph.search": "Cerca per paràgraf",
-	"resource.password": "Contrasenya",
-	"resource.pdf.help": "Cerca",
-	"resource.reference_image": "Imatge de referència",
-	"resource.resource_edit": "Edició del recurs",
+	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} per pàgina",
-	"resource.search_one": "Cerca'n un/a",
-	"resource.section.materials.files": "Documents",
-	"resource.section.materials.links": "Enllaços",
-	"resource.section.materials.no_files": "No hi ha documents",
-	"resource.section.materials.no_links": "No hi ha enllaços",
-	"resource.section.materials.no_related": "No hi ha articles relacionats",
-	"resource.section.materials.related": "Articles",
-	"resource.section.materials.title": "Continguts relacionats",
+	"resource.search.in-resource": "en recurs",
+	"resource.search.in-title": "al títol",
 	"resource.selected_count": "{{num}} arxius seleccionats",
-	"resource.showHightligh": "Ressaltar entitats",
-	"resource.source_file": "Document d'origen",
 	"resource.status": "Estat",
+	"resource.status-help.failed": "Els fitxers no es poden processar",
+	"resource.status-help.pending": "Expedients pendents de processar",
 	"resource.status_error": "Error en processar",
 	"resource.status_loading": "S'està carregant l'estat...",
 	"resource.status_pending": "{{count}} recursos pendents de processar",
@@ -427,16 +397,10 @@
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.summary": "Resum",
 	"resource.text": "Text",
-	"resource.textplaceholder": "Escriu aquí ",
+	"resource.thumbnail": "Miniatura",
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
+	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
-	"resource.title_id": "Títol / ID",
-	"resource.total": "Total",
-	"resource.transcript.from": "Des de",
-	"resource.transcript.title": "Transcripció de l'àudio ",
-	"resource.transcript.to": "a",
-	"resource.type": "Tipus",
-	"resource.updated": "Data actualització",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
 	"search.more_results": "mostrar més resultats",
 	"search.sort_by": "Ordenar per",
@@ -466,6 +430,7 @@
 	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la caixa de coneixement. Torneu-ho a intenta, sius plau",
 	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"stash.create.in_progress": "Creació de la caixa de coneixement en curs...",
+	"stash.create.languages-help": "Seleccioneu si la informació que penjareu a la KB està en un o més idiomes. Si només hi ha un idioma, seleccioneu-lo per a una major precisió.",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
 	"stash.delete.delete": "Eliminar caixa de coneixement?",
@@ -521,10 +486,7 @@
 	"stash.side.audit": "Auditoria",
 	"stash.side.create": "Creació de contingut",
 	"stash.side.entities": "Conceptes clau",
-	"stash.side.file": "Pujar fitxer",
-	"stash.side.folder": "Pujar carpeta",
 	"stash.side.import": "Importa fitxers",
-	"stash.side.link": "Pujar enllaç",
 	"stash.side.list": "Llistat recursos",
 	"stash.side.manage": "Gestiona recursos",
 	"stash.side.page": "Afegir pàgina",
@@ -594,11 +556,16 @@
 	"upload.completed": "completat",
 	"upload.duplicated": "Fitxer duplicat",
 	"upload.error": "Error desconegut",
+	"upload.files": "Carregueu fitxers",
+	"upload.folder": "Carregueu una carpeta",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
+	"upload.link": "Afegeix un enllaç",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
+	"upload.size_warning_2": "Els fitxers que superin aquesta mida no es penjaran",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
+	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
 	"upload.uploading_queue": "Cua de pujades",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
