--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -45,7 +45,6 @@
 	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
 	"account.logo": "Box image",
-	"account.logo_description": "Select and upload an image",
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
@@ -184,7 +183,6 @@
 	"generic.back_to_home": "Back to Home Page",
 	"generic.by_relevance": "by relevance ",
 	"generic.cancel": "Cancel",
-	"generic.change_file": "Upload image",
 	"generic.clean": "Clean",
 	"generic.clear_all": "Clear All",
 	"generic.close": "Close",
@@ -265,6 +263,7 @@
 	"generic.title": "Title",
 	"generic.uid": "UID",
 	"generic.unlink": "Unlink",
+	"generic.upload": "Upload",
 	"generic.user": "User",
 	"generic.user_preferences": "User preferences",
 	"generic.users": "Users",
@@ -295,7 +294,7 @@
 	"language.ru": "Russian",
 	"language.sv": "Swedish",
 	"language.tr": "Turkish",
-	"link.create.error": "Error when creating uploading the link",
+	"link.create.error": "Error when uploading the link",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.agree": "I agree to Nuclia’s",
 	"login.check_email": "Check your email!",
@@ -387,17 +386,6 @@
 	"quickstart.go": "Go",
 	"quickstart.pending_tasks": "Pending tasks",
 	"quickstart.remaining_tasks": "{{num}} Remaining tasks",
-	"quickstart.task1.title": "Sign Up",
-	"quickstart.task2.title": "First PDF Upload",
-	"quickstart.task3.title": "Watch tutorial video",
-	"quickstart.task4.description": "Use the “Content Options” in the menu to upload:<br>• 1 document (Word or PDF)<br>• 1 media file (audio or video) in English, Spanish, French, German, Catalan or Italian<br>• 1 link",
-	"quickstart.task4.title": "Upload 3 files (1 minute) ",
-	"quickstart.task5.description": "Check the processing status of your files.<br>Once your files are processed, use the search bar to find results.",
-	"quickstart.task5.title": "Make 3 searches (2 minutes)",
-	"quickstart.task6.description": "Use your API Key to make 3 queries to the API.",
-	"quickstart.task6.title": "Make 3 API Calls (2 minutes)",
-	"quickstart.task7.description": "Let a developer know about Nuclia",
-	"quickstart.task7.title": "Spread the word",
 	"quickstart.title": "Quick start",
 	"recover.description": "Lost your password? Let’s fix that. Just enter the email address you registered with, and we’ll start the recovery procedure.",
 	"recover.gologin": "Go to the login page",
@@ -409,26 +397,18 @@
 	"reset.password": "New password",
 	"reset.password_reset": "Your password has been reset",
 	"reset.title": "Create password",
-	"resource.access_source_file": "Access document in its origin",
 	"resource.add_labels": "Add labels",
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
-	"resource.back_to_results": "Back to results",
 	"resource.classification": "Classification",
-	"resource.close_preview": "Close preview",
 	"resource.created": "Created",
-	"resource.created_text": "Text created",
-	"resource.creation_date": "Date of creation for the resource",
-	"resource.default_data": "Default data",
 	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
 	"resource.delete_resources_confirm": "Delete documents?",
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
-	"resource.description": "Description",
 	"resource.description.title": "Description",
 	"resource.edit": "Edit resource",
-	"resource.edit_selected_resources": "Edit selected resources",
 	"resource.entities.date": "Date",
 	"resource.entities.event": "Events",
 	"resource.entities.fac": "Constructions",
@@ -448,38 +428,15 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.file": "File",
-	"resource.file.creator": "Creator",
-	"resource.file.metadata.title": "Resource metadata",
-	"resource.file_creation_date": "File creation date",
-	"resource.hidehighlight": "Delete highlight",
-	"resource.inception.title": "Objects found",
-	"resource.language": "Language",
 	"resource.link": "Link",
-	"resource.name_entities": "Insights",
-	"resource.non_editable_data": "Non-editable data",
-	"resource.ocr.title": "OCR",
-	"resource.other_data": "Other data from the resource",
-	"resource.page.upload_image": "Upload a main image for the resource",
-	"resource.paragraph.help": "Search",
-	"resource.paragraph.search": "Paragraph search",
-	"resource.password": "Password",
-	"resource.pdf.help": "Search",
 	"resource.profile": "Profile",
-	"resource.reference_image": "Lead image",
-	"resource.resource_edit": "Editing the resource",
 	"resource.resource_page_number": "{{num}} per page",
-	"resource.search_one": "Search one",
-	"resource.section.materials.files": "Documents",
-	"resource.section.materials.links": "Links",
-	"resource.section.materials.no_files": "There are no documents",
-	"resource.section.materials.no_links": "No links",
-	"resource.section.materials.no_related": "There are no related articles",
-	"resource.section.materials.related": "Articles",
-	"resource.section.materials.title": "Related content",
+	"resource.search.in-resource": "in resource",
+	"resource.search.in-title": "in title",
 	"resource.selected_count": "{{num}} files selected",
-	"resource.showHightligh": "Highlight entities",
-	"resource.source_file": "Origin of the document",
 	"resource.status": "Status",
+	"resource.status-help.failed": "Files failing to be processed",
+	"resource.status-help.pending": "Files pending to be processed",
 	"resource.status_error": "Error while processing",
 	"resource.status_loading": "Loading status…",
 	"resource.status_pending": "{{count}} resources pending to be processed",
@@ -489,18 +446,10 @@
 	"resource.summary": "Abstract",
 	"resource.summary.help": "Displayed as preview",
 	"resource.text": "Text",
-	"resource.textplaceholder": "Write here",
 	"resource.thumbnail": "Thumbnail",
 	"resource.thumbnail.drop": "Drop image or click here",
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
 	"resource.title": "Resource title",
-	"resource.title_id": "Title / ID",
-	"resource.total": "Total",
-	"resource.transcript.from": "From",
-	"resource.transcript.title": "Audio transcription",
-	"resource.transcript.to": "to",
-	"resource.type": "Type",
-	"resource.updated": "Updated",
 	"resource.visible_columns_dropdown": "Columns displayed",
 	"search.more_results": "show more results",
 	"search.sort_by": "Sort by",
@@ -538,7 +487,7 @@
 	"stash.create.language.mono-help": "Choose the language of the documentation in this knowledge box",
 	"stash.create.language.multi": "Multilingual",
 	"stash.create.languages": "Languages",
-	"stash.create.languages-help": "Select if information that will be uploaded to the KB will be in one or more languages. If there’s only one language, select that for improved accuracy.",
+	"stash.create.languages-help": "Select if information you will upload to the KB is in one or more languages. If there’s only one language, select it for better accuracy.",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this knowledge box (defaults to the account’s zone)",
 	"stash.create_service_access": "Create new Service Access",
 	"stash.delete.delete": "Delete knowledge box?",
@@ -611,10 +560,7 @@
 	"stash.side.audit": "Audit",
 	"stash.side.create": "Content creation",
 	"stash.side.entities": "Key concepts",
-	"stash.side.file": "File upload",
-	"stash.side.folder": "Folder upload",
 	"stash.side.import": "Import files",
-	"stash.side.link": "Link upload",
 	"stash.side.list": "Resources list",
 	"stash.side.manage": "Manage resources",
 	"stash.side.page": "Add page",
@@ -693,12 +639,13 @@
 	"upload.completed": "completed",
 	"upload.duplicated": "Duplicated file",
 	"upload.error": "Unknown error",
+	"upload.files": "Upload files",
+	"upload.folder": "Upload a folder",
 	"upload.invalid_image": "Selected file is not a valid image",
+	"upload.link": "Add a link",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
-	"upload.progress.complete": "Upload complete",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
-	"upload.progress.uploaded": "Uploaded",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
 	"upload.size_warning_2": "Files exceeding this size will not be uploaded",
