--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -38,7 +38,6 @@
 	"account.knowledgeboxes": "Cajas de conocimiento",
 	"account.licence": "Licencia",
 	"account.logo": "Imagen de la caja",
-	"account.logo_description": "Selecciona y sube una imagen",
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
@@ -147,7 +146,6 @@
 	"generic.back_to_home": "Volver a la Home",
 	"generic.by_relevance": "por relevancia",
 	"generic.cancel": "Cancelar",
-	"generic.change_file": "Sube la imagen",
 	"generic.clean": "Limpiar",
 	"generic.clear_all": "Borrar todo",
 	"generic.close": "Cerrar",
@@ -224,6 +222,7 @@
 	"generic.title": "Título",
 	"generic.uid": "UID",
 	"generic.unlink": "Desenlazar",
+	"generic.upload": "Subir",
 	"generic.user": "Usuario",
 	"generic.user_preferences": "Preferencias de Usuario",
 	"generic.users": "Usuarios",
@@ -254,6 +253,7 @@
 	"language.ru": "Ruso",
 	"language.sv": "Sueco",
 	"language.tr": "Turco",
+	"link.create.error": "Error al subir el enlace",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
 	"login.company": "Empresa",
@@ -351,26 +351,18 @@
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Crea contraseña",
-	"resource.access_source_file": "Acceder al documento de origen",
 	"resource.add_labels": "Agregar etiquetas",
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
-	"resource.back_to_results": "Volver a los resultados",
 	"resource.classification": "Clasificación",
-	"resource.close_preview": "Cerrar previsualización",
 	"resource.created": "Data de creación",
-	"resource.created_text": "Texto creado",
-	"resource.creation_date": "Fecha de creación del recurso",
-	"resource.default_data": "Datos por defecto",
 	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
 	"resource.delete_resources_confirm": "¿Eliminar documentos?",
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
-	"resource.description": "Descripción",
 	"resource.description.title": "Descripción",
 	"resource.edit": "Editar recurso",
-	"resource.edit_selected_resources": "Edición del recurso o recursos seleccionados",
 	"resource.entities.date": "Fechas",
 	"resource.entities.event": "Eventos",
 	"resource.entities.fac": "Construcciones",
@@ -389,36 +381,14 @@
 	"resource.entities.time": "Tiempo",
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
-	"resource.file.creator": "Creador",
-	"resource.file.metadata.title": "Metadatos del recurso",
-	"resource.file_creation_date": "Data de creación del archivo",
-	"resource.hidehighlight": "Elimina el resaltado",
-	"resource.inception.title": "Elementos encontrados",
-	"resource.language": "Idioma",
-	"resource.name_entities": "Palabras clave",
-	"resource.non_editable_data": "Datos no editables",
-	"resource.ocr.title": "OCR",
-	"resource.other_data": "Otros datos del recurso",
-	"resource.page.upload_image": "Sube una imagen descriptiva del recurso",
-	"resource.paragraph.help": "Busca",
-	"resource.paragraph.search": "Busca en párrafo",
-	"resource.password": "Contraseña",
-	"resource.pdf.help": "Busca",
-	"resource.reference_image": "Imagen de referencia",
-	"resource.resource_edit": "Edición del recurso",
+	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} por página",
-	"resource.search_one": "Busca uno/a",
-	"resource.section.materials.files": "Documents",
-	"resource.section.materials.links": "Enlaces",
-	"resource.section.materials.no_files": "No hay documentos",
-	"resource.section.materials.no_links": "No hay enlaces",
-	"resource.section.materials.no_related": "No hay artículos relacionados",
-	"resource.section.materials.related": "Artículos",
-	"resource.section.materials.title": "Contenidos relacionados",
+	"resource.search.in-resource": "en recurso",
+	"resource.search.in-title": "en el titulo",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
-	"resource.showHightligh": "Resaltar entidades",
-	"resource.source_file": "Documento de origen",
 	"resource.status": "Estado",
+	"resource.status-help.failed": "Archivos que no se pueden procesar",
+	"resource.status-help.pending": "Expedientes pendientes de tramitar",
 	"resource.status_error": "Error al procesar",
 	"resource.status_loading": "Cargando estado…",
 	"resource.status_pending": "{{count}} recursos pendientes de procesar",
@@ -427,16 +397,10 @@
 	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
-	"resource.textplaceholder": "Escribe aquí",
+	"resource.thumbnail": "Miniatura",
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
+	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
-	"resource.title_id": "Título / ID",
-	"resource.total": "Total",
-	"resource.transcript.from": "Desde",
-	"resource.transcript.title": "Transcripción del audio",
-	"resource.transcript.to": "a",
-	"resource.type": "Tipo",
-	"resource.updated": "Fecha de actualización",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
 	"search.more_results": "mostrar más resultados",
 	"search.sort_by": "Ordenar por",
@@ -466,6 +430,7 @@
 	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la caja de conocimiento. Por favor vuelve a intentarlo.",
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
 	"stash.create.in_progress": "Creación de la caja de conocimiento en curso...",
+	"stash.create.languages-help": "Seleccione si la información que cargará en la KB está en uno o más idiomas. Si solo hay un idioma, selecciónelo para una mayor precisión.",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
 	"stash.create_service_access": "Crea un nuevo Service Access",
 	"stash.delete.delete": "¿Eliminar caja de conocimiento?",
@@ -521,10 +486,7 @@
 	"stash.side.audit": "Auditoría",
 	"stash.side.create": "Creación de contenido",
 	"stash.side.entities": "Conceptos clave",
-	"stash.side.file": "Subir fichero",
-	"stash.side.folder": "Subir carpeta",
 	"stash.side.import": "Importa ficheros",
-	"stash.side.link": "Subir enlace",
 	"stash.side.list": "Listado de recursos",
 	"stash.side.manage": "Gestiona recursos",
 	"stash.side.page": "Añadir página",
@@ -594,11 +556,16 @@
 	"upload.completed": "completado",
 	"upload.duplicated": "Fichero duplicado",
 	"upload.error": "Error desconocido",
+	"upload.files": "Subir archivos",
+	"upload.folder": "Subir una carpeta",
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
+	"upload.link": "Agregar un enlace",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
+	"upload.size_warning_2": "Los archivos que excedan este tamaño no se cargarán",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
+	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
 	"upload.uploading_queue": "Cola de subidas",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
