Allow to import a list of links

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -332,9 +332,9 @@
 	"login.user_registered_as_external_user": "A user with this email already exists. Please sign in with your Google Account.",
 	"login.validate_and_explore": "Please, verify your account",
 	"modal.create_link.input": "Type or paste the link",
-	"modal.create_link.link_duplicated": "There is an identical link in the knowledge box",
-	"modal.create_link.tags": "Add a tag to the link",
-	"modal.create_link.title": "Add link",
+	"modal.create_link.multiple": "Multiple",
+	"modal.create_link.textarea": "Paste some links (one per line)",
+	"modal.create_link.title": "Add links",
 	"modal.show_waiting_list": "Check file uploads",
 	"modal.upload.choose_language": "Select language of the file for audio and video files",
 	"modal.upload.drop": "Drop files here",
@@ -643,7 +643,7 @@
 	"upload.files": "Upload files",
 	"upload.folder": "Upload a folder",
 	"upload.invalid_image": "Selected file is not a valid image",
-	"upload.link": "Add a link",
+	"upload.link": "Add links",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
