--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -290,9 +290,9 @@
 	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google.",
 	"login.validate_and_explore": "Verifica la cuenta y empieza a explorar ",
 	"modal.create_link.input": "Escribe o pega el enlace",
-	"modal.create_link.link_duplicated": "Hay un enlace idéntico en la caja de conocimiento.",
-	"modal.create_link.tags": "Añade una etiqueta en el enlace",
-	"modal.create_link.title": "Añadir enlace",
+	"modal.create_link.multiple": "Múltiple",
+	"modal.create_link.textarea": "Pegue algunos enlaces (uno por línea)",
+	"modal.create_link.title": "Añadir enlaces",
 	"modal.show_waiting_list": "Compruebe la cola de ficheros",
 	"modal.upload.choose_language": "En caso de ser audios o vídeos, selecciona el idioma del fichero",
 	"modal.upload.drop": "Drop files here",
@@ -561,7 +561,7 @@
 	"upload.files": "Subir archivos",
 	"upload.folder": "Subir una carpeta",
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
-	"upload.link": "Agregar un enlace",
+	"upload.link": "Agregar enlaces",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
