--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -290,9 +290,9 @@
 	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google.",
 	"login.validate_and_explore": "Verifica el compte i comença a explorar",
 	"modal.create_link.input": "Escriu o enganxa l’enllaç",
-	"modal.create_link.link_duplicated": "Existeix un enllaç idèntic a la caixa de coneixement",
-	"modal.create_link.tags": "Afegeix una etiqueta a l'enllaç",
-	"modal.create_link.title": "Afegir enllaç",
+	"modal.create_link.multiple": "Múltiples",
+	"modal.create_link.textarea": "Enganxeu alguns enllaços (un per línia)",
+	"modal.create_link.title": "Afegeix enllaços",
 	"modal.show_waiting_list": "Comprova la cua de fitxers",
 	"modal.upload.choose_language": "En cas de ser àudios o un vídeos, selecciona l'idioma del fitxer ",
 	"modal.upload.drop": "Llança els fitxers aqui",
@@ -561,7 +561,7 @@
 	"upload.files": "Carregueu fitxers",
 	"upload.folder": "Carregueu una carpeta",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
-	"upload.link": "Afegeix un enllaç",
+	"upload.link": "Afegeix enllaços",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
