--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -48,5 +48,6 @@
 	"results.sentences": "Frases relevantes",
 	"results.summary": "Resumen",
 	"suggest.intents": "Etiquetas",
-	"suggest.paragraphs": "Párrafo sugerido"
+	"suggest.paragraphs": "Párrafo sugerido",
+	"tile.find-transcript": "Encuentra una transcripción"
 }
