New signup page layout

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -257,7 +257,7 @@
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.check_email": "Comprova el teu correu!",
 	"login.company": "Empresa",
-	"login.continue_with": "Continua amb",
+	"login.continue_with": "Accedir amb",
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
 	"login.email": "Correu electrònic",
@@ -424,6 +424,7 @@
 	"setup.soon_more_areas": "Més zones per escollir properament",
 	"setup.upload_file": "Puja un arxiu",
 	"setup.upload_using_api": "Puja dades amb l'API",
+	"signup.sign-up-with": "Registra't amb <strong>{{provider}}</strong>",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
 	"stash.create": "Crea una caixa de coneixement",
