--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -257,7 +257,7 @@
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
 	"login.company": "Empresa",
-	"login.continue_with": "Continua con",
+	"login.continue_with": "Iniciar con",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
 	"login.email": "Correo electrónico",
@@ -424,6 +424,7 @@
 	"setup.soon_more_areas": "Más zonas para escoger próximamente",
 	"setup.upload_file": "Sube un archivo",
 	"setup.upload_using_api": "Sube datos con la API",
+	"signup.sign-up-with": "Regístrese con <strong>{{provider}}</strong>",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
 	"stash.create": "Crea una caja de conocimiento",
