--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -299,7 +299,7 @@
 	"login.agree": "I agree to Nuclia’s",
 	"login.check_email": "Check your email!",
 	"login.company": "Company",
-	"login.continue_with": "Continue with",
+	"login.continue_with": "Log in with",
 	"login.create_one": "Create",
 	"login.description": "Know what your company knows",
 	"login.email": "Email",
@@ -473,6 +473,7 @@
 	"setup.soon_more_areas": "More areas coming soon",
 	"setup.upload_file": "Upload a file",
 	"setup.upload_using_api": "Upload using the API",
+	"signup.sign-up-with": "Sign up with <strong>{{provider}}</strong>",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
